bugs fixes
